# inSight

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
app/: config.py  main.py
app/application/: graph.py  nodes.py  state.py
app/domain/: exceptions.py
app/domain/schemas/: __init__.py  candidate.py  essay.py  evaluation.py  integrity.py  trajectory.py
app/infrastructure/: checkpointer.py  llm.py
app/presentation/: dependencies.py
app/presentation/api/v1/: evaluate.py  router.py
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260401_0001_initial.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  seed.py
backend/app/models/: __init__.py  admin_decision.py  applicant_profile.py  essay_review.py  user.py
backend/app/routers/: admin.py  applicant.py  auth.py
backend/app/schemas/: admin.py  applicant.py  auth.py  essay_review.py
backend/app/services/: ai_pipeline.py  applicant_service.py  auth_service.py  storage_service.py  whisper_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ApplicantDisclaimer.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  label.tsx  progress.tsx  select.tsx  table.tsx  tabs.tsx  toast.tsx  toaster.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/: format.ts
frontend/src/pages/admin/: AdminDashboardPage.tsx  ApplicantDetailPage.tsx  ApplicantsListPage.tsx
frontend/src/pages/applicant/: ApplicationFormPage.tsx  DashboardPage.tsx  EssayPage.tsx  StatusPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
scripts/: test_e2e.py
