[project]
name = "invision-langgraph-backend"
version = "0.1.0"
description = "Intelligent Candidate Selection Support System — Explainable AI for university admissions evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "langgraph",
    "langchain-openai",
    "pydantic-settings",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
